First end-to-end run with output